app/src/main/java/com/example/newstart/data/error/ErrorCase.kt
package com.example.newstart.data.error

/**
 * Created by Roy
 */
interface ErrorCase {

    fun getError(errorCode: Int): BaseError
}